<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFitnessAndroidApp</string>
    <string name="SingleRecord">Single record</string>
    <string name="Timer">Timer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="AddExerciseRecord">Save Activity</string>
    <string name="ExerciseManagement">Add a new exercise record:</string>
    <string name="WelcomeText">Welcome to your fitness tracker!</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="ActivityRecordTextBoxHintMessage">Insert your record value here</string>
    <string name="LogOutButtonText">Log out</string>
    <string name="title_activity_exercise_record_results">ExerciseRecordResults</string>
    <string name="ResultsSaved">Result saved!</string>
    <string name="ResultsGoBack" >Go Back</string>
    <string name="ResultsRecordTitle">Record value:</string>

</resources>
